Desafio 1 block e expire

--- a/config.yaml
+++ b/config.yaml
@@ -4,10 +4,10 @@ rate_limit:
       limit: 10
     - ip: "192.168.1.2"
       limit: 15
-    - ip: "172.25.0.1"
-      limit: 1
   tokens:
     - token: "token123"
-      limit: 5
+      limit: 2
+      expiration: 5
+      block: 10
     - token: "tokenABC"
       limit: 25
